# mpai-aif-v1

./: .gitignore  JSON_MPAI_UseCase.json  LICENSE.md  README.md  README.rst  custom_hwids.py  extra.py  platformio.ini
.west/: config
docs/: mpai_aif.json  mpai_aim_ControlUnitSensorsReading.json  mpai_aim_MotionRecognitionAnalysis.json  mpai_aim_MovementsWithAudioValidation.json  mpai_aim_VolumePeaksAnalysis.json  mpai_aiw_cae_rev.json  mpai_aiw_iot_rev.json
lib/mpai_core/: config_store.c  config_store.h  core_aim.c  core_aim.h  core_common.c  core_common.h  flash_store.c  flash_store.h  message_store.c  message_store.h
lib/mpai_libs/: aif_controller.c  aif_controller.h  aif_metadata_parser.c  aif_metadata_parser.h  aiw_cae_rev.c  aiw_cae_rev.h  aiw_iot_rev.c  aiw_iot_rev.h  data_mic_aim.c  data_mic_aim.h  mic_common.h  motion_aim.c  motion_aim.h  motion_common.h  rehabilitation_aim.c  rehabilitation_aim.h  sensors_aim.c  sensors_aim.h  sensors_common.h  temp_limit_aim.c  temp_limit_aim.h  test_use_case_aiw.c  test_use_case_aiw.h
lib/stm32_libs/: stm32l475e_iot01_audio.c  stm32l475e_iot01_audio.h  stm32l475e_iot01_conf.h
lib/util_libs/: coap_connect.c  coap_connect.h  misc_utils.c  misc_utils.h  wifi_config.h  wifi_connect.c  wifi_connect.h
src/: config.h  main.c  stm32l475e_iot01_clock_conf.c  test_use_case_aiw.c  test_use_case_aiw.h  wifi_config.h  wifi_connect.c  wifi_connect.h  wifi_demo.c  wifi_demo.h
west/: CMakeLists.txt  Kconfig  app.overlay  west.yml
zephyr/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
